2013-04-02  Peter Bloomfield

	* libbalsa/html.c (lbh_get_body_content_utf8): sanitize UTF-8
	text.

2013-03-31  Peter Bloomfield

	Do not leak search-text

	* libbalsa/html.c (lbh_webkit_info_free), (libbalsa_html_new),
	(lbh_search_failed_to_find_text_cb), (lbh_search_found_text_cb),
	(lbh_search_init), (lbh_search_continue), (libbalsa_html_search):
	move search info to LibBalsaWebKitInfo, and free search-text in
	the GDestroyNotify function.

2013-03-30  Peter Bloomfield

	Refactor HTML search code to work with asynchronous search in
	Webkit2.

	* libbalsa/html.c (lbh_web_process_crashed_cb): spew message
	only when debugging;
	(lbh_search_failed_to_find_text_cb), (lbh_search_found_text_cb),
	(lbh_search_init), (lbh_search_continue),
	(libbalsa_html_search): work with asynchronous search;
	(libbalsa_html_get_selection_bounds): is now gboolean, return
	FALSE in Webkit2 version.
	* libbalsa/html.h: new protoypes.
	* src/balsa-message.c (bm_find_cb), (bm_find_entry_changed_cb),
	(bm_find_again), (balsa_message_destroy): work with asynchronous
	search.
	* src/balsa-message.h: add gpointer member to store HTML search
	info.

2013-03-28  Peter Bloomfield

	* libbalsa/html.c (lbh_navigation_policy_decision),
	(lbh_new_window_policy_decision), (lbh_response_policy_decision):
	Clicking a link may cause a new window policy decision, instead
	of a navigation policy decision; we handle both cases.

2013-03-27  Peter Bloomfield

	* libbalsa/html.c: reduce zoom factor to +/- 20%.

2013-03-27  Peter Bloomfield

	* libbalsa/html.c (lbh_info_bar_response_cb),
	(lbh_info_bar_realize_cb), (lbh_show_info_bar),
	(lbh_resource_load_started_cb), (libbalsa_html_new):
	Use regex scan of HTML text to detect downloads, because Webkit2
	does not alert us in time to control them.

2013-03-24  Peter Bloomfield

	Initial check in support for WebKitGtk2

	* configure.ac: add webkit2 as an html-engine option; default is
	still webkit.
	* libbalsa/html.c (lbh_get_body_content_utf8),