@@ -395,7 +395,7 @@ append_header_names(LibBalsaCondition *cond, GString *res)
     for (i=0; i<ELEMENTS(header_name_map); ++i) {
         if (CONDITION_CHKMATCH(cond, header_name_map[i].header)) {
             if (res->len>0) {
-                g_string_append_printf(res, _(",%s"),
+                g_string_append_printf(res, ",%s",
                                        _(header_name_map[i].header_name));
             } else {
                 res = g_string_append(res, _(header_name_map[i].header_name));
@@ -423,7 +423,7 @@ append_flag_names(LibBalsaCondition *cond, GString *res)
             if (res->len == len) {
                 res = g_string_append(res, _(flag_name_map[i].flag_name));
             } else {
-                g_string_printf(res, _(",%s"),
+                g_string_printf(res, ",%s",
                                 _(flag_name_map[i].flag_name));
             }
         }
